Consistently use ProcessBuilder instead of Runtime.exec